tests/variables/errors/out_of_scope1.c
int main()
{
    int a;
    j = 0;
    for (int i = 0; i < 10; i++)
    {
        a = 1;
        for (int j = 0; j < 10; j++)
        {
            a = 1;
        }
        j = 0;
    }
    i = 0;
    j = 0;
    return 0;
}